--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -14,9 +13,44 @@
     <title>Secxion</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 
+    <!-- Fallback Route Handling Script -->
+    <script>
+      (function() {
+        // Check if the path is not "/" and there's no hash or query
+        var isReactRoute = 
+          !location.pathname.startsWith('/static') &&
+          location.pathname !== '/' &&
+          !location.pathname.endsWith('.js') &&
+          !location.pathname.endsWith('.css') &&
+          !location.pathname.endsWith('.png') &&
+          !location.pathname.endsWith('.jpg') &&
+          !location.pathname.endsWith('.ico') &&
+          !location.search &&
+          !location.hash;
+
+        if (isReactRoute) {
+          // Replace current location with root and preserve full path in state
+          sessionStorage.setItem('redirectPath', location.pathname);
+          window.location.replace('/');
+        }
+      })();
+    </script>
   </head>
+
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+
+    <!-- Optional: Redirect back after JS app initializes -->
+    <script>
+      (function () {
+        const path = sessionStorage.getItem('redirectPath');
+        if (path) {
+          sessionStorage.removeItem('redirectPath');
+          // Use history API to restore intended route
+          window.history.replaceState(null, '', path);
+        }
+      })();
+    </script>
   </body>
 </html>
