--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -12,6 +12,8 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Secxion</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+
 
     <!-- Fallback Route Handling Script -->
     <script>
