--- a/backend/frontend/index.html
+++ b/backend/frontend/index.html
@@ -1,24 +1,1 @@
-<!doctype html>
-<html lang="en">
-
-<head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="secxion" content="buying and selling gift cards and other online transaction services" />
-    <link rel="manifest" href="/manifest.json" />
-    <title>Secxion</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-    <script>!(location.pathname.startsWith("/static") || "/" === location.pathname || location.pathname.endsWith(".js") || location.pathname.endsWith(".css") || location.pathname.endsWith(".png") || location.pathname.endsWith(".jpg") || location.pathname.endsWith(".ico") || location.search || location.hash) && (sessionStorage.setItem("redirectPath", location.pathname), window.location.replace("/"))</script>
-    <script defer="defer" src="/static/js/main.cd1606d2.js"></script>
-    <link href="/static/css/main.a39571ba.css" rel="stylesheet">
-</head>
-
-<body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <script>!function () { const e = sessionStorage.getItem("redirectPath"); e && (sessionStorage.removeItem("redirectPath"), window.history.replaceState(null, "", e)) }()</script>
-</body>
-
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href=""/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="secxion" content="buying and selling gift cards and other online transaction services"/><link rel="manifest" href="/manifest.json"/><title>Secxion</title><link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet"><link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet"><script>!(location.pathname.startsWith("/static")||"/"===location.pathname||location.pathname.endsWith(".js")||location.pathname.endsWith(".css")||location.pathname.endsWith(".png")||location.pathname.endsWith(".jpg")||location.pathname.endsWith(".ico")||location.search||location.hash)&&(sessionStorage.setItem("redirectPath",location.pathname),window.location.replace("/"))</script><script defer="defer" src="/static/js/main.5322c31e.js"></script><link href="/static/css/main.8e512210.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script>!function(){const e=sessionStorage.getItem("redirectPath");e&&(sessionStorage.removeItem("redirectPath"),window.history.replaceState(null,"",e))}()</script></body></html>
