--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
-<html lang="en" class="dark">
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover, user-scalable=no, minimal-ui" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, minimal-ui" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="apple-mobile-web-app-title" content="Secxion" />
     <meta name="application-name" content="Secxion" />
-    <meta name="theme-color" content="#000000" media="(prefers-color-scheme: dark)" />
-    <meta name="theme-color" content="#fdd835" media="(prefers-color-scheme: light)" />
-    <meta name="color-scheme" content="dark light" />
+    
     <meta name="description" content="Secxion - online transaction services : gift cards, online transactions, secure payments, digital commerce " />
     <meta name="keywords" content="gift cards, online transactions, secure payments, digital commerce" />
     <meta name="author" content="Secxion" />
@@ -22,73 +20,19 @@
     <meta property="og:url" content="https://secxion.com" />
     <meta property="og:image" content="/og-image.png" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Secxion - Secure Digital Transactions" />
-    <meta name="twitter:description" content="Professional platform for gift cards and online transaction services" />
-    <meta name="twitter:image" content="/twitter-image.png" />
-
     <link rel="manifest" href="/manifest.json" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-
+  
     <title>Secxion - Professional Digital Transaction Platform</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter&family=JetBrains+Mono&display=swap" rel="stylesheet" />
 
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-      tailwind.config = {
-        darkMode: 'class',
-        theme: {
-          extend: {
-            fontFamily: {
-              sans: ['Inter', 'ui-sans-serif', 'system-ui'],
-              mono: ['JetBrains Mono', 'ui-monospace', 'SFMono-Regular'],
-            },
-            colors: {
-              gray: { 50: '#f9fafb', 100: '#f3f4f6', 200: '#e5e7eb', 300: '#d1d5db', 400: '#9ca3af', 500: '#6b7280', 600: '#4b5563', 700: '#374151', 800: '#1f2937', 900: '#111827', 950: '#000000' },
-              yellow: { 50: '#fffde7', 100: '#fff9c4', 200: '#fff59d', 300: '#fff176', 400: '#ffee58', 500: '#ffeb3b', 600: '#fdd835', 700: '#fbc02d', 800: '#f9a825', 900: '#f57f17', 950: '#e65100' },
-              blue: { 50: '#eff6ff', 100: '#dbeafe', 200: '#bfdbfe', 300: '#93c5fd', 400: '#60a5fa', 500: '#3b82f6', 600: '#2563eb', 700: '#1d4ed8', 800: '#1e40af', 900: '#1e3a8a', 950: '#172554' },
-              emerald: { 50: '#ecfdf5', 100: '#d1fae5', 200: '#a7f3d0', 300: '#6ee7b7', 400: '#34d399', 500: '#10b981', 600: '#059669', 700: '#047857', 800: '#065f46', 900: '#064e3b', 950: '#022c22' },
-            },
-          },
-        },
-      };
-    </script>
-
-    <script>
-      (function() {
-        const getTheme = () => {
-          const stored = localStorage.getItem('theme');
-          if (stored && ['light', 'dark'].includes(stored)) return stored;
-          return window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light';
-        };
-        const setTheme = (theme) => {
-          document.documentElement.classList.toggle('dark', theme === 'dark');
-          localStorage.setItem('theme', theme);
-        };
-        const theme = getTheme();
-        setTheme(theme);
-        window.matchMedia('(prefers-color-scheme: dark)').addEventListener('change', (e) => {
-          if (!localStorage.getItem('theme')) setTheme(e.matches ? 'dark' : 'light');
-        });
-      })();
-    </script>
-
     <meta http-equiv="X-Content-Type-Options" content="nosniff" />
     <meta http-equiv="X-Frame-Options" content="DENY" />
     <meta http-equiv="X-XSS-Protection" content="1; mode=block" />
     <meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin" />
   </head>
-
-  <body class="bg-white dark:bg-gray-950 text-gray-900 dark:text-gray-100 transition-colors duration-300">
-    <div class="loading-screen">
-      <div class="loading-spinner"></div>
-      <div class="loading-text"></div>
-    </div>
 
     <div id="root" class="min-h-screen"></div>
 
